--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="https://cdn.bootcdn.net/ajax/libs/loaders.css/0.1.2/loaders.min.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
